# nlp-coursework-2024-25-fpersyn

./: PartOne.py  PartTwo.py  README.md  answers.txt  name-and-declaration.txt  pyproject.toml
